refactor(api):  replacing code snippets that were deprecated